Almost all createNewSig's layout was done, the object catalog has been formed already.

--- a/css/create_new_sig.css
+++ b/css/create_new_sig.css
@@ -4,7 +4,7 @@
     margin: 0 auto;
     background: white;
     border: solid 0.1px blue;
-    height: 600px;
+    height: 85vh;
     text-align: center;    
     margin-top: 15px;
 }
