--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@
 .btNewCatalog{
     position: absolute !important;
     bottom: 20px !important;
-    right: 10px !important;
+    right: -80px !important;
 }
 
 h5{
@@ -27,14 +27,13 @@ h5{
 }
 
 .background{    
-    width: 100vw;
+    width: 100%;
     height: 89vh;
 }
 
 .backgroundImage{
-    width: 100vw;
-    height: 89vh; 
-    background-image: url("/imgs/background2.png");    
+    width: 100%;
+    height: 89vh;  
     opacity: 0.4;
 }
 
